<resources>
    <string name="app_name">Cuples</string>
    <string name="contacto">Contacto</string>
    <string name="email">Email...</string>
    <string name="password">Contraseña...</string>
    <string name="login">Log In</string>
    <string name="logingoogle">Login Google</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo">logo</string>
    <string name="ayuda">Ayuda</string>
    <string name="nombre">Escribe tu nombre...</string>
    <string name="Edad">Escribe tu edad...</string>
    <string name="ajustes">Editar_Perfil</string>
    <string name="repeatpass">Repetir contraseña...</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Alex Rivas Sánchez</string>
    <string name="nav_header_email">arivass90@elpuig.xeill.net</string>
    <string name="nav_header_desc">Foto gmail</string>
    <string name="inicio">Inicio</string>
    <string name="carne_vip">Carné Vip</string>
    <string name="calendario">Calendario</string>
    <string name="galeria">Galeria</string>
    <string name="test_de_compatibilidad">Test de Compatibilidad</string>
    <string name="salir">Desconectar</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Nombre</string>
    <string name="contact_form_email">Email</string>
    <string name="contact_form_subject">Asunto</string>
    <string name="contact_form_message">Mensaje</string>
    <string name="contact_form_button">Enviar Mensaje</string>
    <string name="contact_form_post_message">Por favor espere, su mensaje se esta enviando.</string>
    <string name="contact_posted">Su mensaje se envió correctamente, el equipo de Cuples se pondra en contacto con usted en menos 24 horas.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
