<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:theme="@style/AppTheme.NoActionBar"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.AppBarLayout>

    <ImageButton
        android:id="@+id/FotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/datoNombre"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/nombre"
        android:inputType=""
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/datoEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FotoPerfil" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Define tu sexo"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FotoPerfil" />

    <EditText
        android:id="@+id/datoEdad"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/Edad"
        android:inputType=""
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="84dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/BtnRegistrofinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mujer" />

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hombre" />

    </RadioGroup>


    <Button
        android:id="@+id/BtnRegistrofinal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:text="@string/registrarse"
        android:textColor="@color/colorText"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>